start edits for basket page

--- a/dev/public/basket.html
+++ b/dev/public/basket.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>корзина</title>
+    <title>basket</title>
     <meta name="robots" content="index, follow">
     <meta property="og:type" content="website">
     <meta property="og:title" content="Брусника">
@@ -53,7 +53,7 @@
                 <li class="header-menu__item header-menu__item_search catalog-search-open only-mobile_header-menu"><a href="#"><span>Поиск</span></a></li>
               </ul>
             </div>
-            <div class="header-menu__center"><a class="header-logo" href="http://brusnika.ruformat.ru/"><img src="../svg/header_logo.svg" alt=""></a></div>
+            <div class="header-menu__center"><a class="header-logo" href="http://brusnika.ruformat.ru/"><img src="../svg/header_logo.png" alt=""></a></div>
             <div class="header-menu__right">
               <ul class="header-menu__list">
                 <li class="header-menu__item header-menu__item_search catalog-search-open only-desktop_header-menu"><a href="#"><span>Поиск</span></a></li>
@@ -124,7 +124,7 @@
                           <div class="catalog-items row catalog-items--slider">
                             <div class="col-md-2">
                               <div class="catalog-item w2">
-                                <div class="catalog-item-photo-holder"><img class="cover" src="../dummy/catalog/c21.jpg"></div>
+                                <div class="catalog-item-photo-holder"><img class="cover" src="../dummy/catalog/c24.jpg"></div>
                                 <div class="catalog-item-title justify-content-between">Жакет 1</div>
                                 <div class="catalog-item-price">1999 РУБ.</div>
                               </div>
@@ -152,7 +152,7 @@
                             </div>
                             <div class="col-md-2">
                               <div class="catalog-item w2">
-                                <div class="catalog-item-photo-holder"><img class="cover" src="../dummy/catalog/c21.jpg"></div>
+                                <div class="catalog-item-photo-holder"><img class="cover" src="../dummy/catalog/c24.jpg"></div>
                                 <div class="catalog-item-title justify-content-between">Жакет 1</div>
                                 <div class="catalog-item-price">1999 РУБ.</div>
                               </div>
@@ -289,69 +289,6 @@
                     <div class="col-md-2"><a class="order-table-delete" href="#"> </a></div>
                   </div>
                 </div>
-                <div class="order-table__title">С этим товаром смотрят</div>
-                <div class="order-table__block order-table__mr">
-                  <div class="order-table basket">
-                    <div class="order-table__row">
-                      <div class="order-table__item catalog-item1">
-                        <div class="order-table__img">
-                          <div class="order-photo-holder"><img class="cover" src="../dummy/catalog/c2.jpg"></div>
-                        </div>
-                        <div class="order-table__info">
-                          <div class="order-table__row">
-                            <div class="order-table__name">БРЮКИ</div><a class="order-table-heart" href="#"> </a>
-                          </div>
-                          <div class="order-table__price">6 500 РУБ.</div>
-                          <div class="order-table__color">
-                            <div class="order-table__color" style="width: calc( * 19px);"><a class="order-table__color-link" href="#"> <span class="color-red"></span></a><a class="order-table__color-link" href="#"> <span class="color-yellow"></span></a>
-                              <div class="order-table__color-link order-table__color-link_last d-none"></div>
-                            </div>
-                          </div>
-                          <div class="product-size-select">
-                            <select class="form-item form-item--select w100">
-                              <option value="Выберите размер" item.selected>Выберите размер</option>
-                              <option value="S" item.selected>S</option>
-                              <option value="M" item.selected>M</option>
-                              <option value="L" item.selected>L</option>
-                              <option value="XL" item.selected>XL</option>
-                            </select>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <div class="order-table__block order-table__mr">
-                  <div class="order-table basket">
-                    <div class="order-table__row">
-                      <div class="order-table__item catalog-item1">
-                        <div class="order-table__img">
-                          <div class="order-photo-holder"><img class="cover" src="../dummy/catalog/c9.jpg"></div>
-                        </div>
-                        <div class="order-table__info">
-                          <div class="order-table__row">
-                            <div class="order-table__name">БРЮКИ</div><a class="order-table-heart" href="#"> </a>
-                          </div>
-                          <div class="order-table__price">15 900 РУБ.</div>
-                          <div class="order-table__color">
-                            <div class="order-table__color" style="width: calc( * 19px);"><a class="order-table__color-link" href="#"> <span class="color-red"></span></a><a class="order-table__color-link" href="#"> <span class="color-yellow"></span></a>
-                              <div class="order-table__color-link order-table__color-link_last d-none"></div>
-                            </div>
-                          </div>
-                          <div class="product-size-select">
-                            <select class="form-item form-item--select w100">
-                              <option value="Выберите размер" item.selected>Выберите размер</option>
-                              <option value="S" item.selected>S</option>
-                              <option value="M" item.selected>M</option>
-                              <option value="L" item.selected>L</option>
-                              <option value="XL" item.selected>XL</option>
-                            </select>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
               </div>
             </div>
             <div class="basket-mobile-menu__footer">
@@ -368,7 +305,7 @@
             <div class="size-open size-menu__close1 size-menu__close"></div>
             <div class="basket-menu-sections" style="overflow: auto;"> 
               <div class="size-menu__title">Таблица размеров</div>
-              <div class="basket-mobile-menu__body test1 simplebar">
+              <div class="basket-mobile-menu__body simplebar">
                 <div>
                   <div class="size-menu__text">
                     Этот справочник по размерам носит ориентировочный характер.
@@ -404,12 +341,12 @@
                       </label>
                       <label data-tab="#size-tabs_six" data-tabs=".size-tab">
                         <div class="size-item-content">
-                          <div class="size-item-title">Рост H1</div>
+                          <div class="size-item-title">Рост&nbsp;H1</div>
                         </div>
                       </label>
                       <label data-tab="#size-tabs_seven" data-tabs=".size-tab">
                         <div class="size-item-content">
-                          <div class="size-item-title">Рост H2</div>
+                          <div class="size-item-title">Рост&nbsp;H2</div>
                         </div>
                       </label>
                     </div>
@@ -590,7 +527,7 @@
                       <div class="order-table__info">
                         <div class="order-table__name">БРЮКИ</div>
                         <div class="order-table__price">15 900 Р</div>
-                        <div class="order-table__size">2Размер: 41 RU</div>
+                        <div class="order-table__size">Размер: 41 RU</div>
                         <div class="order-table__color">Цвет: коричневый</div>
                         <div class="order-table__counter only-mobile">
                           <input class="form-item form-item--number" type="number" min="1" max="100" step="1" value="1">
@@ -613,7 +550,7 @@
                       <div class="order-table__info">
                         <div class="order-table__name">БРЮКИ</div>
                         <div class="order-table__price">16 900 Р</div>
-                        <div class="order-table__size">2Размер: 42 RU</div>
+                        <div class="order-table__size">Размер: 42 RU</div>
                         <div class="order-table__color">Цвет: синий</div>
                         <div class="order-table__counter only-mobile">
                           <input class="form-item form-item--number" type="number" min="1" max="100" step="1" value="1">
@@ -628,52 +565,6 @@
                       <div class="order-table__item-delete"><a class="order-table-delete" href="#"> </a></div>
                     </div>
                   </div>
-                  <div class="order-table__row">
-                    <div class="order-table__item">
-                      <div class="order-table__img">
-                        <div class="order-photo-holder"><img class="cover" src="../dummy/orders/3.jpg"></div>
-                      </div>
-                      <div class="order-table__info">
-                        <div class="order-table__name">БРЮКИ</div>
-                        <div class="order-table__price">17 900 Р</div>
-                        <div class="order-table__size">2Размер: 43 RU</div>
-                        <div class="order-table__color">Цвет: белый</div>
-                        <div class="order-table__counter only-mobile">
-                          <input class="form-item form-item--number" type="number" min="1" max="100" step="1" value="1">
-                        </div>
-                      </div>
-                      <div class="order-table__count">
-                        <div class="order-table__counter only-desktop">
-                          <input class="form-item form-item--number" type="number" min="1" max="100" step="1" value="1">
-                        </div>
-                      </div>
-                      <div class="order-table__price">17 900 РУБ.</div>
-                      <div class="order-table__item-delete"><a class="order-table-delete" href="#"> </a></div>
-                    </div>
-                  </div>
-                  <div class="order-table__row">
-                    <div class="order-table__item">
-                      <div class="order-table__img">
-                        <div class="order-photo-holder"><img class="cover" src="../dummy/orders/4.jpg"></div>
-                      </div>
-                      <div class="order-table__info">
-                        <div class="order-table__name">БРЮКИ</div>
-                        <div class="order-table__price">18 900 Р</div>
-                        <div class="order-table__size">2Размер: 44 RU</div>
-                        <div class="order-table__color">Цвет: зеленый</div>
-                        <div class="order-table__counter only-mobile">
-                          <input class="form-item form-item--number" type="number" min="1" max="100" step="1" value="1">
-                        </div>
-                      </div>
-                      <div class="order-table__count">
-                        <div class="order-table__counter only-desktop">
-                          <input class="form-item form-item--number" type="number" min="1" max="100" step="1" value="1">
-                        </div>
-                      </div>
-                      <div class="order-table__price">18 900 РУБ.</div>
-                      <div class="order-table__item-delete"><a class="order-table-delete" href="#"> </a></div>
-                    </div>
-                  </div>
                 </div>
                 <div class="d-md-none mobile-table-summary center"><b>К оплате: 14 760 Р</b></div>
                 <div class="d-none d-md-block"><a class="link link--gray_border small" href="basket_empty.html">
@@ -682,16 +573,17 @@
               </div>
               <form class="form basket-form"> 
                 <div style="max-width: 718px;">
-                  <div class="basket-form__title">1.Доставка</div>
+                  <div class="basket-form__title">1.Ваш город</div>
                   <div class="form-row">
                     <label class="form-item-label" for="city">Ваш город</label>
                     <input class="form-item form-item--text" id="city" type="text" name="city" data-validation="{&quot;message&quot;: &quot;Обязательное поле&quot;}" required="" value="Ростов-на-Дону">
                   </div>
-                  <div class="filter-row filter-row-basket">
+                  <div class="basket-form__title">2. Доставка</div>
+                  <div class="filter-row filter-row-basket"> 
                     <div class="simplebar">
                       <div class="filter-row__inner">
                         <label class="form-radio">
-                          <input class="form-item form-item--radio" type="radio" name="pickup">Самовывоз из магазина  <br>Бесплатно
+                          <input class="form-item form-item--radio" type="radio" name="pickup">Из магазина  <br>Бесплатно
                         </label>
                         <ul class="basket__pickup">
                           <li>
@@ -754,7 +646,7 @@
                               </div>
                             </label>
                           </li>
-                        </ul><a class="link link--gray_border small ml-30px" href="#show-on-map-popup" data-popup="{&quot;type&quot;:&quot;inline&quot;}">Показать на карте</a>
+                        </ul>
                       </div>
                     </div>
                   </div>
@@ -793,7 +685,7 @@
                   </div>
                 </div>
                 <div class="form-row__title">
-                  <div class="basket-form__title">2. Контактные данные</div><span><a class="link link--black_border" href="#">Уже зарегистрированы?</a></span>
+                  <div class="basket-form__title">2. Контактные данные</div><span><a class="link link--black_border" href="#auth-form" data-popup="{&quot;type&quot;:&quot;inline&quot;}">Уже зарегистрированы?</a></span>
                 </div>
                 <div class="form-row">
                   <div class="form-group">
@@ -870,80 +762,15 @@
         </div>
       </main>
       <footer class="page-footer" itemscope="" itemtype="http://schema.org/WPFooter">
-        <div class="page-inner page-inner--w1">
-          <div class="footer-top">
-            <ul class="footer-top__list">
-              <li class="footer-top__item"><a href="#">VKONTAKTE</a></li>
-              <li class="footer-top__item"><a href="#">Telegram</a></li>
-              <li class="footer-top__item"><a href="#">WHATSAPP</a></li>
-            </ul>
-          </div>
-          <div class="footer-content">
-            <div class="footer-content__left">
-              <div class="accordion d-block d-lg-none w-100">
-                <div class="accordion-item">
-                  <div class="accordion-item-heading">Покупателю</div>
-                  <div class="accordion-item-content">
-                    <ul class="footer-content__list">
-                      <li><a href="#">Доставка и оплата</a></li>
-                      <li><a href="#">Гарантия и возврат</a></li>
-                      <li><a href="#">Руководство по покупке</a></li>
-                      <li><a href="#">Система лояльности</a></li>
-                    </ul>
-                  </div>
-                </div>
-                <div class="accordion-item">
-                  <div class="accordion-item-heading">Компания</div>
-                  <div class="accordion-item-content">
-                    <ul class="footer-content__list">
-                      <li><a href="shops.html">Магазины</a></li>
-                      <li><a href="#">О нас</a></li>
-                      <li><a href="#">Контакты</a></li>
-                      <li><a href="#">Работа у нас</a></li>
-                    </ul>
-                  </div>
-                </div>
-              </div>
-              <div class="d-none d-lg-flex w-100">
-                <ul class="footer-content__list">
-                  <li><a href="#">Доставка и оплата</a></li>
-                  <li><a href="#">Гарантия и возврат</a></li>
-                  <li><a href="#">Руководство по покупке</a></li>
-                  <li><a href="#">Система лояльности</a></li>
-                </ul>
-                <ul class="footer-content__list">
-                  <li><a href="shops.html">Магазины</a></li>
-                  <li><a href="#">О нас</a></li>
-                  <li><a href="#">Контакты</a></li>
-                  <li><a href="#">Работа у нас</a></li>
-                </ul>
-              </div>
-            </div>
-            <div class="footer-content__center"><a class="header-logo" href="#"><img src="../svg/header_logo.svg" alt=""></a></div>
-            <div class="footer-content__right">
-              <div class="footer-content__right-content">
-                <div class="footer-text only-desktop">Подпишитесь на рассылку с новостями о тенденциях, специальных предложениях и новинках!</div>
-                <div class="footer-form only-desktop">
-                  <form action="">
-                    <div class="footer-form__form">
-                      <input type="text" placeholder="Введите свой E-mail">
-                      <button class="btn btn--white">ok</button>
-                    </div>
-                    <div class="privacy-policy">Подписываясь на расслыку, вы соглашаетесь<br>с <a href="#">политикой конфиденциальности</a></div>
-                  </form>
-                </div>
-              </div>
-            </div>
-          </div>
+        <div class="page-inner page-inner--w2"> 
           <div class="footer-bottom">
-            <div class="footer-bottom__left only-desktop">
+            <div class="footer-bottom__left">
               <ul class="footer-bottom__list">
                 <li><a href="#">Политика конфиденциальности</a></li>
                 <li><a href="#">Оферта</a></li>
               </ul>
             </div>
-            <div class="footer-bottom__center"><a href="#">©2022 Brusnika</a></div>
-            <div class="footer-bottom__right only-desktop">© 1999-2022 Интернет-магазин «Brusnika»    </div>
+            <div class="footer-bottom__right">Разработка сайта — RUFORMAT®</div>
           </div>
         </div>
       </footer>
@@ -1384,7 +1211,7 @@
                 </div>
                 <div class="mobile-filter-item-content"></div>
               </div>
-              <div class="mobile-filter-item">
+              <div class="mobile-filter-item mobile-filter-item--size">
                 <div class="mobile-filter-item-heading">
                   <div class="mobile-filter-item-heading-title">Размер</div>
                   <div class="mobile-filter-item-heading-toggler"></div>
