--- a/dev/public/card.html
+++ b/dev/public/card.html
@@ -1178,7 +1178,7 @@
         </div>
       </footer>
     </div>
-    <div class="page-popup mfp-hide" id="auth-form">
+    <div class="page-popup page-popup--auth-form mfp-hide" id="auth-form">
       <div class="page-popup-inner">
         <div class="page-popup-title">Войти</div>
         <div class="page-popup-title--small">Введите свою почту и пароль, чтобы войти.</div>
@@ -1202,7 +1202,7 @@
                   <button class="btn btn--black btn--medium w100 max-w100" type="submit">ВЫСЛАТЬ КОД</button>
                 </div>
                 <div class="form-row">
-                  <div class="form-group-inner"><a class="link link--black_simple" href="#"><span>Я забыл пароль  </span></a><a class="link link--black_simple" href="#"><span>Регистрация</span></a></div>
+                  <div class="form-group-inner"><a class="link link--black_border" href="#"><span>Я забыл пароль  </span></a><a class="link link--black_border" href="#"><span>Регистрация</span></a></div>
                 </div>
               </div>
               <div class="tab-content-item auth-tab active form-tab-content-item" id="auth-form_email">
@@ -1222,7 +1222,7 @@
                   <button class="btn btn--black btn--medium w100 max-w100" type="submit">Войти</button>
                 </div>
                 <div class="form-row">
-                  <div class="form-group-inner"><a class="link link--black_simple" href="#"><span>Я забыл пароль  </span></a><a class="link link--black_simple" href="#"><span>Регистрация</span></a></div>
+                  <div class="form-group-inner"><a class="link link--black_border" href="#"><span>Я забыл пароль  </span></a><a class="link link--black_border" href="#"><span>Регистрация</span></a></div>
                 </div>
               </div>
             </div>
