--- a/dev/public/brand-large.html
+++ b/dev/public/brand-large.html
@@ -567,7 +567,7 @@
                 <div class="catalog-item-text">
                   <div class="catalog-item-text__title">ПЛАТЬЯ И КОМБИНЕЗОНЫ НОВОГО СЕЗОНА ДЛЯ ЖЕНЩИН</div>
                   <div class="catalog-item-text__lid">Подготовьте свой гардероб к первым дням весны с нашей новой подборкой, в которую вошли новые модели актуальных оттенков</div><a class="link-more link-more-js" href="#">Подробнее</a>
-                  <div class="d-none">текст подробнее текст подробнее текст подробнее</div>
+                  <div class="v-hidden">текст подробнее текст подробнее текст подробнее</div>
                 </div>
               </div>
             </div>
@@ -1716,7 +1716,7 @@
         </div>
       </footer>
     </div>
-    <div class="page-popup mfp-hide" id="auth-form">
+    <div class="page-popup page-popup--auth-form mfp-hide" id="auth-form">
       <div class="page-popup-inner">
         <div class="page-popup-title">Войти</div>
         <div class="page-popup-title--small">Введите свою почту и пароль, чтобы войти.</div>
@@ -1740,7 +1740,7 @@
                   <button class="btn btn--black btn--medium w100 max-w100" type="submit">ВЫСЛАТЬ КОД</button>
                 </div>
                 <div class="form-row">
-                  <div class="form-group-inner"><a class="link link--black_simple" href="#"><span>Я забыл пароль  </span></a><a class="link link--black_simple" href="#"><span>Регистрация</span></a></div>
+                  <div class="form-group-inner"><a class="link link--black_border" href="#"><span>Я забыл пароль  </span></a><a class="link link--black_border" href="#"><span>Регистрация</span></a></div>
                 </div>
               </div>
               <div class="tab-content-item auth-tab active form-tab-content-item" id="auth-form_email">
@@ -1760,7 +1760,7 @@
                   <button class="btn btn--black btn--medium w100 max-w100" type="submit">Войти</button>
                 </div>
                 <div class="form-row">
-                  <div class="form-group-inner"><a class="link link--black_simple" href="#"><span>Я забыл пароль  </span></a><a class="link link--black_simple" href="#"><span>Регистрация</span></a></div>
+                  <div class="form-group-inner"><a class="link link--black_border" href="#"><span>Я забыл пароль  </span></a><a class="link link--black_border" href="#"><span>Регистрация</span></a></div>
                 </div>
               </div>
             </div>
