--- a/dev/public/basket.html
+++ b/dev/public/basket.html
@@ -567,24 +567,22 @@
                   </div>
                 </div>
               </div>
-              <form class="form basket-form"> 
-                <div style="max-width: 718px;border: 1px solid red;">
+              <form class="form basket-page-form">
+                <div>
                   <div class="basket-form__title">1.Ваш город</div>
                   <div class="form-row">
-                    <label class="form-item-label" for="city">Ваш город</label>
                     <div class="search-form search-form--basket">
                       <input class="search-form__input form-item form-item--text" type="text" name="city" placeholder="" data-validation="{&quot;message&quot;: &quot;Обязательное поле&quot;}" required="" value="Ростов-на-Дону">
                       <button class="search-form__clear input__clear_visibility_visible btn btn--medium" type="button"></button>
                     </div>
+                    <label class="form-item-label" for="city">Ваш город</label>
                   </div>
-                  <div class="basket-form__title">2. Доставка</div>
-                  <div class="filter-row filter-row-click">
-                    <div class="simplebar">
-                      <div class="filter-row__inner">
-                        <label class="form-radio">
-                          <input class="form-item form-item--radio" type="radio" name="pickup">Из магазина  <br>Бесплатно
-                        </label>
-                        <div class="filter-row__content d-none">
+                  <div class="form-row">
+                    <div class="basket-form__title">2. Доставка</div>
+                    <div class="accordion accordion--basket-page">
+                      <div class="accordion-item">
+                        <div class="accordion-item-heading">Из магазина  <br>Бесплатно</div>
+                        <div class="accordion-item-content">
                           <ul class="basket__pickup">
                             <li>
                               <label class="form-radio">
@@ -612,19 +610,17 @@
                         </div>
                       </div>
                     </div>
-                  </div>
-                  <div class="filter-row filter-row-click">
-                    <div class="simplebar">
-                      <div class="filter-row__inner">
-                        <label class="form-radio">
-                          <div class="filter-row__radio-coll">
-                            <input class="form-item form-item--radio" type="radio" name="pickup">
-                            <div>Курьерска служба СДЭК с бесплатной примеркойот 160  Р</div>
-                          </div>
-                          <div class="filter-row__text-coll">Примерка 15 минут. Если после примерки не подошла вещь, вы можете вернуть её курьеру. </div>
-                        </label>
-                        <div class="filter-row__content d-none"> 
-                          <div class="mt-40px">
+                    <div class="filter-row filter-row-click">
+                      <div class="simplebar">
+                        <div class="filter-row__inner">
+                          <label class="form-radio">
+                            <div class="filter-row__radio-coll">
+                              <input class="form-item form-item--radio" type="radio" name="pickup">
+                              <div>Курьерска служба СДЭК с бесплатной примеркойот 160  Р</div>
+                            </div>
+                            <div class="filter-row__text-coll">Примерка 15 минут. Если после примерки не подошла вещь, вы можете вернуть её курьеру. </div>
+                          </label>
+                          <div class="filter-row__content d-none"> 
                             <div class="mb-30px">Примерка 15 минут. Если после примерки не подошла вещь, вы можете вернуть её курьеру. Возврат денежных средств будет осуществлен в течений 1-7 рабочих дней.</div>
                             <div class="bold mb-10px"> Куда доставить заказ?</div>
                             <div class="mb-30px">
@@ -632,53 +628,108 @@
                                 <input class="search-form__input form-item form-item--text" type="text" name="city" placeholder="" data-validation="{&quot;message&quot;: &quot;Обязательное поле&quot;}" required="" value="Москва, ул. Ленина, 44, кв. 23">
                                 <button class="search-form__clear input__clear_visibility_visible btn btn--medium" type="button"></button>
                               </div>
-                            </div><a class="link link--black_border basket-add-comment" href="#">Добавить комментарий к заказу</a>
-                            <div class="mt-30px"> 
-                              <textarea class="form-item--textarea w-100 d-none" name="" cols="30" rows="10"> </textarea>
+                            </div><a class="link-more link-more-js" href="#"> Добавить комментарий к заказу</a>
+                            <div class="v-hidden">
+                              <div class="mt-30px"> 
+                                <textarea class="form-item--textarea w-100" name="" cols="30" rows="10"> </textarea>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="filter-row filter-row-click">
+                      <div class="simplebar">
+                        <div class="filter-row__inner">
+                          <label class="form-radio">
+                            <div class="filter-row__radio-coll">
+                              <input class="form-item form-item--radio" type="radio" name="pickup">
+                              <div>Пункты выдачи СДЭК<br> от 238 Р</div>
+                            </div>
+                            <div class="filter-row__text-coll">Доставка заказа в один из пунктов самовывоза компании СДЭК.</div>
+                          </label>
+                          <div class="filter-row__content d-none"> 
+                            <div class="mb-30px">Примерка 15 минут. Если после примерки не подошла вещь, вы можете вернуть её курьеру. Возврат денежных средств будет осуществлен в течений 1-7 рабочих дней.</div>
+                            <div class="bold mb-10px"> Куда доставить заказ?</div>
+                            <div class="mb-30px">
+                              <div class="search-form search-form--basket">
+                                <input class="search-form__input form-item form-item--text" type="text" name="city" placeholder="" data-validation="{&quot;message&quot;: &quot;Обязательное поле&quot;}" required="" value="Москва, ул. Ленина, 44, кв. 23">
+                                <button class="search-form__clear input__clear_visibility_visible btn btn--medium" type="button"></button>
+                              </div>
+                            </div><a class="link-more link-more-js" href="#"> Добавить комментарий к заказу</a>
+                            <div class="v-hidden">
+                              <div class="mt-30px"> 
+                                <textarea class="form-item--textarea w-100" name="" cols="30" rows="10"> </textarea>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="filter-row filter-row-click">
+                      <div class="simplebar">
+                        <div class="filter-row__inner">
+                          <label class="form-radio">
+                            <div class="filter-row__radio-coll">
+                              <input class="form-item form-item--radio" type="radio" name="pickup">
+                              <div>Пункты выдачи Via Delivery <br> от 193 Р</div>
+                            </div>
+                            <div class="filter-row__text-coll">Доставка заказов с выдачей на кассе в Пятерочке или в отделениях СберБанка.</div>
+                          </label>
+                          <div class="filter-row__content d-none"> 
+                            <div class="bold mb-10px"> Куда доставить заказ?</div>
+                            <div class="mb-30px">
+                              <button class="btn btn--medium" type="button">ВЫБРАТЬ ПУНКТ ВЫДАЧИ</button>
                             </div>
                           </div>
                         </div>
                       </div>
                     </div>
                   </div>
-                </div>
-                <div class="form-row__title">
-                  <div class="basket-form__title">2. Контактные данные</div><span><a class="link link--black_border" href="#auth-form" data-popup="{&quot;type&quot;:&quot;inline&quot;}">Уже зарегистрированы?</a></span>
-                </div>
-                <div class="form-row">
-                  <div class="form-group">
-                    <div class="form-group-inner">
-                      <div class="form-group-item form-group-item--w32">
-                        <label class="form-label" for="ord_name">Фамилия/Имя/Отчество</label>
-                        <input class="form-item form-item--text form-item--middle" id="ord_name" type="text" name="ord_name" required="" data-validation="">
-                      </div>
-                      <div class="form-group-item form-group-item--w32">
-                        <label class="form-label" for="ord_phone">Телефон</label>
-                        <input class="form-item form-item--text form-item--middle" id="ord_phone" type="text" name="ord_phone" required="" data-validation="{&quot;pattern&quot;: &quot;phoneRU&quot;, &quot;mask&quot;: &quot;+7 (999) 999-99-99&quot;}">
-                      </div>
-                      <div class="form-group-item form-group-item--w32">
-                        <label class="form-label" for="ord_email">Почта</label>
-                        <input class="form-item form-item--text form-item--middle" id="ord_email" type="email" name="ord_email" required="" data-validation="{&quot;message&quot;: &quot;Пользователь с таким именем  зарегистрирован&quot;}">
+                  <div class="form-row">
+                    <div class="form-row__title">
+                      <div class="basket-form__title">2. Контактные данные</div><span><a class="link link--black_border" href="#auth-form" data-popup="{&quot;type&quot;:&quot;inline&quot;}">Уже зарегистрированы?</a></span>
+                    </div>
+                    <div class="form-row">
+                      <div class="form-group">
+                        <div class="form-group-inner">
+                          <div class="form-group-item form-group-item--w32">
+                            <label class="form-label" for="ord_name">Фамилия/Имя/Отчество</label>
+                            <input class="form-item form-item--text form-item--middle" id="ord_name" type="text" name="ord_name" required="" data-validation="">
+                          </div>
+                          <div class="form-group-item form-group-item--w32">
+                            <label class="form-label" for="ord_phone">Телефон</label>
+                            <input class="form-item form-item--text form-item--middle" id="ord_phone" type="text" name="ord_phone" required="" data-validation="{&quot;pattern&quot;: &quot;phoneRU&quot;, &quot;mask&quot;: &quot;+7 (999) 999-99-99&quot;}">
+                          </div>
+                          <div class="form-group-item form-group-item--w32">
+                            <label class="form-label" for="ord_email">Почта</label>
+                            <input class="form-item form-item--text form-item--middle" id="ord_email" type="email" name="ord_email" required="" data-validation="{&quot;message&quot;: &quot;Пользователь с таким именем  зарегистрирован&quot;}">
+                          </div>
+                        </div>
                       </div>
                     </div>
                   </div>
-                </div>
-                <div class="basket-form__title">3. Оплата</div>
-                <div class="form-row">
-                  <div class="form-row-payment">
-                    <label class="form-radio" id="payment">
-                      <input class="form-item form-item--radio" type="radio" id="payment-card" name="ord_payment" value="card"><span class="form-radio-title">Банковской картой на сайте</span>
-                    </label>
-                    <label class="form-radio">
-                      <input class="form-item form-item--radio" type="radio" id="payment-receipt" name="ord_payment" value="receipt"><span class="form-radio-title">Оплата при получении</span>
-                    </label>
+                  <div class="form-row">
+                    <div class="basket-form__title">3. Оплата</div>
+                    <div class="form-row">
+                      <div class="form-group">
+                        <div class="form-group-inner">
+                          <div>
+                            <label class="form-radio filter-row-click" id="payment">
+                              <input class="form-item form-item--radio" type="radio" id="payment-card" name="ord_payment" value="card"><span class="form-radio-title">Банковской картой на сайте</span>
+                            </label>
+                            <div class="filter-row__content d-none">*Скидка 2% при фактической оплате заказа на сайте.</div>
+                          </div>
+                          <div>
+                            <label class="form-radio filter-row-click">
+                              <input class="form-item form-item--radio" type="radio" id="payment-receipt" name="ord_payment" value="receipt"><span class="form-radio-title">Оплата при получении</span>
+                            </label>
+                            <div class="filter-row__content d-none">Оплата производится в момент получения заказа наличными или банковской картой (при предварительном согласовании)</div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
                   </div>
-                </div>
-                <div class="form-row">
-                  <div class="form-row-saile text-card d-none"> *Скидка 2% при фактической оплате заказа на сайте.   </div>
-                </div>
-                <div class="form-row">
-                  <div class="form-row-saile text-receipt d-none"> Оплата производится в момент получения заказа наличными или банковской картой (при предварительном согласовании)   </div>
                 </div>
               </form>
             </div>
